--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
-dash==2.14.1
-flask==2.2.5
+dash==2.14.2
+dash-bootstrap-components==1.5.0
+pandas==2.1.1
 plotly==5.18.0
-pandas==2.1.2
 pyodbc==4.0.39
-python-dateutil==2.8.2
+flask==2.2.5
+gunicorn==21.2.0
+pytz==2023.3
