--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 dash==2.14.2
 dash-bootstrap-components==1.5.0
-numpy==1.24.3  # Add this specific version
+numpy==1.24.3 
 pandas==2.1.1
 plotly==5.18.0
 pyodbc==4.0.39
